SET (PYTHON_BINDINGS_DIR           ${CMAKE_CURRENT_SOURCE_DIR})
SET (PYTHON_BINDINGS_PROJECT_GROUP ${EXTENSIONS_PROJECT_GROUP}/PythonBindings)

ADD_SUBDIRECTORY(database)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(graphics)
ADD_SUBDIRECTORY(scene)

ADD_CUSTOM_TARGET(PythonBindings)
SET_TARGET_PROPERTIES (PythonBindings PROPERTIES
    FOLDER ${PYTHON_BINDINGS_PROJECT_GROUP}
)
ADD_DEPENDENCIES( PythonBindings 
    PyDatabase
    PyMath
    PyGraphics
    PyScene
)

IF (MSVC)
    SET (BINGINDS_PATH ${RUNTIME_OUTPUT_DIRECTORY}/${CMAKE_CFG_INTDIR})
ELSE (MSVC)
    SET (BINGINDS_PATH ${RUNTIME_OUTPUT_DIRECTORY})
ENDIF (MSVC)
ADD_CUSTOM_COMMAND(TARGET  PythonBindings
                   COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py" "${BINGINDS_PATH}/slon/__init__.py")