SET (PYTHON_BINDINGS_DIR                ${CMAKE_CURRENT_SOURCE_DIR})
SET (PYTHON_BINDINGS_PROJECT_GROUP      ${EXTENSIONS_PROJECT_GROUP}/PythonBindings)
SET (PYTHON_BINDINGS_OUTPUT_DIRECTORY   ${CFG_RUNTIME_OUTPUT_DIRECTORY}/extensions/PythonBindings)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(database)
ADD_SUBDIRECTORY(math)
ADD_SUBDIRECTORY(graphics)
ADD_SUBDIRECTORY(scene)

ADD_CUSTOM_TARGET(PythonBindings)
SET_TARGET_PROPERTIES (PythonBindings PROPERTIES
    FOLDER ${PYTHON_BINDINGS_PROJECT_GROUP}
)
ADD_DEPENDENCIES( PythonBindings 
    PyCommon
    PyDatabase
    PyMath
    PyGraphics
    PyScene
)
ADD_CUSTOM_COMMAND(TARGET  PythonBindings
                   COMMAND ${CMAKE_COMMAND} -E copy_if_different "${CMAKE_CURRENT_SOURCE_DIR}/__init__.py" "${PYTHON_BINDINGS_OUTPUT_DIRECTORY}/slon/__init__.py")