# list headers
SET ( HEADER_PATH ${EXAMPLE_SOURCE_DIR}/include)
SET ( EXAMPLE_HEADERS

)

# list sources
AUX_SOURCE_DIRECTORY(. EXAMPLE_SOURCES)

# target
ADD_EXECUTABLE( ${EXAMPLE_NAME} ${EXAMPLE_HEADERS} ${EXAMPLE_SOURCES} )

# libraries
TARGET_LINK_LIBRARIES( ${EXAMPLE_NAME} ${TARGET_UNIX_NAME} )
