# list headers
SET ( HEADER_PATH ${EXAMPLE_SOURCE_DIR}/include)
SET ( EXAMPLE_HEADERS

)

# list sources
SET( EXAMPLE_SOURCES
	main.cpp
)

# target
ADD_EXECUTABLE( ${EXAMPLE_NAME} ${EXAMPLE_HEADERS} ${EXAMPLE_SOURCES} )
SET_TARGET_PROPERTIES ( ${EXAMPLE_NAME} PROPERTIES 
                        RUNTIME_OUTPUT_DIRECTORY "${RUNTIME_OUTPUT_DIRECTORY}"
                        FOLDER                    ${EXAMPLE_PROJECT_GROUP} )
IF (MSVC)
	SET_TARGET_PROPERTIES ( ${EXAMPLE_NAME} PROPERTIES 
							PREFIX "../" )
ENDIF (MSVC)

# libraries
TARGET_LINK_LIBRARIES( ${EXAMPLE_NAME} ${TARGET_UNIX_NAME} )
