# list sources
AUX_SOURCE_DIRECTORY(. EXAMPLE_SOURCES)

# target
ADD_EXECUTABLE( ${EXAMPLE_NAME} ${EXAMPLE_HEADERS} ${EXAMPLE_SOURCES} )
SET_TARGET_PROPERTIES ( ${EXAMPLE_NAME} PROPERTIES 
                        RUNTIME_OUTPUT_DIRECTORY "${RUNTIME_OUTPUT_DIRECTORY}"
                        FOLDER                    ${EXAMPLE_PROJECT_GROUP} ) 
IF (MSVC)
	SET_TARGET_PROPERTIES ( ${EXAMPLE_NAME} PROPERTIES 
							PREFIX "../" )
ENDIF (MSVC)

# libraries
TARGET_LINK_LIBRARIES( ${EXAMPLE_NAME} ${TARGET_UNIX_NAME} )

# install
IF (INSTALL_EXAMPLES)
    INSTALL ( TARGETS ${EXAMPLE_NAME}
        RUNTIME DESTINATION ${EXAMPLE_INSTALL_BINDIR}
    )
ENDIF (INSTALL_EXAMPLES)
